ReorderDataInLogFiles